--- a/src/main/resources/com/project/controller/Assests/Fx.css
+++ b/src/main/resources/com/project/controller/Assests/Fx.css
@@ -1,53 +1,31 @@
 .text-field {
   -fx-border-radius: 12;
-  border-radius: 12;
   -fx-border-color: rgb(250, 250, 250);
-  border-color: rgb(250, 250, 250);
   -fx-min-width: 289.8;
-  min-width: 289.8;
   -fx-blend-mode: lighten;
-  mix-blend-mode: lighten;
   -fx-font-size: 1.5em;
-  font-size: 1.5em;
   -fx-background-color: black;
-  background-color: black;
   -fx-font-family: "Poppins";
-  font-family: "Poppins";
   -fx-font-weight: 600;
-  font-weight: 600;
   -fx-text-fill: white;
   -fx-border-width: 1.1px;
-  border-width: 1.1px;
   -fx-prompt-text-fill: white;
-  text-emphasis-color: white;
   -fx-prompt-text-font-family: "Montserrat";
-  font-family: "Montserrat";
   -fx-padding: 2 2 2 8;
-  padding: 2 2 2 8;
 }
 
 .btn {
   -fx-background-color: #2A2A2A;
-  background-color: #2A2A2A;
   -fx-background-radius: 15;
   -fx-border-radius: 6;
-  border-radius: 6;
   -fx-border-width: 2px;
-  border-width: 2px;
   -fx-border-color: rgb(255, 255, 255);
-  border-color: rgb(255, 255, 255);
   -fx-font-family: "Montserrat";
-  font-family: "Montserrat";
-  -fx-font-size: 1.2em;
-  font-size: 1.2em;
+  -fx-font-size: 1.3em;
   -fx-font-weight: 800;
-  font-weight: 800;
   -fx-padding: 5;
-  padding: 5;
   -fx-text-fill: white;
   -fx-alignment: CENTER;
-  -fx-transition: 300ms;
-  transition: 300ms;
 }
 
 .btn:hover {
@@ -58,18 +36,14 @@
 
 #logout {
   -fx-background-color: #FFFFFF;
-  background-color: #FFFFFF;
   -fx-text-fill: #2A2A2A;
   -fx-border-color: #2A2A2A;
-  border-color: #2A2A2A;
   -fx-border-width: 2px;
-  border-width: 2px;
   -fx-font-size: 1em
 }
 
 #logout:hover {
   -fx-background-color: #2A2A2A;
-  background-color: #2A2A2A;
   -fx-text-fill: white;
 }
 
@@ -77,7 +51,38 @@
   -fx-text-style: underline;
 }
 
+#signup{
+  -fx-background-image: url("Bg.png");
+  -fx-background-repeat: no-repeat;
+}
 
-#main_user {
-  -fx-background-color :  #F2994A;
+.signup-txtfield {
+  -fx-border-radius: 12;
+  -fx-background-radius-radius: 12;
+  /*-fx-min-width: 289.8;*/
+  -fx-font-size: 1.3em;
+  -fx-border-insets: none;
+  -fx-blend-mode: lighten;
+  -fx-background-color: #F4994B;
+  -fx-font-family: "Poppins";
+  -fx-font-weight: 600;
+
+}
+
+.profile{
+  -fx-border-radius: 50;
+  -fx-background-radius: 50;
+}
+
+.label{
+  -fx-font-size: 1.3em;
+  -fx-font-family: "Poppins";
+  -fx-text-fill: rgb(10,10,10);
+  -fx-font-weight: 600;
+}
+
+.label-main{
+  -fx-font-size: 1.4em;
+  -fx-font-family: "Poppins SemiBold";
+  -fx-text-fill: rgb(10,10,10);
 }
