--- a/src/main/resources/com/project/controller/Assests/Fx.css
+++ b/src/main/resources/com/project/controller/Assests/Fx.css
@@ -34,6 +34,18 @@
   -fx-border-color: #2A2A2A;
 }
 
+.users {
+  -fx-blend-mode: multiply;
+}
+
+#static{
+  -fx-blend-mode: lighten;
+}
+
+.users:hover {
+  -fx-blend-mode: lighten;
+}
+
 #logout {
   -fx-background-color: #FFFFFF;
   -fx-text-fill: #2A2A2A;
@@ -54,6 +66,15 @@
 #signup{
   -fx-background-image: url("Bg.png");
   -fx-background-repeat: no-repeat;
+}
+#sign_up{
+  -fx-background-color: rgba(20,20,20,0.1);
+  -fx-padding: 4,0,4,0;
+}
+
+#sign_up:hover {
+  -fx-background-color: rgba(255,255,255,0.2);
+  -fx-text-fill: rgba(20,20,20,0.6);
 }
 
 .signup-txtfield {
