--- a/src/main/resources/com/project/controller/Assests/Fx.css
+++ b/src/main/resources/com/project/controller/Assests/Fx.css
@@ -14,6 +14,26 @@
   -fx-padding: 2 2 2 8;
 }
 
+.text-fields{
+  -fx-border-radius: 12;
+  /*-fx-border-color: rgb(250, 250, 250);*/
+  -fx-min-width: 289.8;
+  -fx-blend-mode: darken;
+  -fx-font-size: 1.5em;
+  -fx-background-color: rgba(220,220,220,0.14);
+  -fx-font-family: "Poppins";
+  -fx-font-weight: 600;
+  -fx-text-fill: black;
+  /*-fx-border-width: 1.1px;*/
+  -fx-prompt-text-fill: black;
+  -fx-prompt-text-font-family: "Montserrat";
+  -fx-padding: 2 2 2 8;
+}
+#back{
+  -fx-background-image: url(back.png);
+  -fx-blend-mode: lighten;
+}
+
 .btn {
   -fx-background-color: #2A2A2A;
   -fx-background-radius: 15;
@@ -36,6 +56,14 @@
 
 .users {
   -fx-blend-mode: multiply;
+}
+
+.radios {
+  -fx-blend-mode: multiply;
+}
+
+.radios:hover {
+  -fx-blend-mode: darken;
 }
 
 #static{
@@ -67,6 +95,7 @@
   -fx-background-image: url("Bg.png");
   -fx-background-repeat: no-repeat;
 }
+
 #sign_up{
   -fx-background-color: rgba(20,20,20,0.1);
   -fx-padding: 4,0,4,0;
@@ -86,8 +115,8 @@
   -fx-blend-mode: lighten;
   -fx-background-color: #F4994B;
   -fx-font-family: "Poppins";
-  -fx-font-weight: 600;
-
+  -fx-text-fill: rgba(10,10,10,0.2);
+  -fx-font-weight: 700;
 }
 
 .profile{
