--- a/src/main/resources/com/project/controller/SignUp.fxml
+++ b/src/main/resources/com/project/controller/SignUp.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import io.github.palexdev.materialfx.controls.MFXButton?>
-<?import io.github.palexdev.materialfx.controls.MFXDatePicker?>
 <?import io.github.palexdev.materialfx.controls.MFXPasswordField?>
 <?import io.github.palexdev.materialfx.controls.MFXTextField?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -28,7 +28,7 @@
                   <Font size="18.0" />
                </font>
             </MFXButton>
-            <Label layoutX="379.0" layoutY="27.0" prefHeight="49.0" prefWidth="132.0" style="-fx-font-size: 32; -fx-text-fill: white;" styleClass="label-main" text="Sign Up" textFill="WHITE">
+            <Label fx:id="Signup_lbl" layoutX="379.0" layoutY="27.0" prefHeight="49.0" prefWidth="132.0" style="-fx-font-size: 32; -fx-text-fill: white;" styleClass="label-main" text="Sign Up" textFill="WHITE">
                <font>
                   <Font name="Poppins SemiBold" size="35.0" />
                </font>
@@ -39,7 +39,7 @@
                </image>
             </ImageView>
             <MFXButton id="back" fx:id="Back" layoutX="171.0" layoutY="38.0" minHeight="20.0" minWidth="40.0" onAction="#backToLogin" prefHeight="32.0" prefWidth="40.0" style="-fx-background-color: none;" text=" " />
-            <ImageView disable="true" fitHeight="68.0" fitWidth="472.0" layoutX="198.0" layoutY="91.0" opacity="0.72">
+            <ImageView fx:id="box2" disable="true" fitHeight="68.0" fitWidth="472.0" layoutX="198.0" layoutY="91.0" opacity="0.72">
                <image>
                   <Image url="@Assests/Bg-.png" />
                </image>
@@ -55,38 +55,59 @@
                   <Color red="1.0" green="1.0" blue="1.0" opacity="0.8700000047683716" />
                </textFill>
             </MFXTextField>
-            <ImageView disable="true" fitHeight="67.0" fitWidth="471.0" layoutX="198.0" layoutY="173.0" opacity="0.72">
+            <ImageView fx:id="box1" disable="true" fitHeight="67.0" fitWidth="471.0" layoutX="198.0" layoutY="173.0" opacity="0.72">
                <image>
                   <Image url="@Assests/Bg-.png" />
                </image>
             </ImageView>
             <MFXPasswordField fx:id="password" floatMode="BORDER" floatingText="password" layoutX="204.0" layoutY="180.0" prefHeight="50.0" prefWidth="460.0" styleClass="signup-txtfield" />
-            <ImageView disable="true" fitHeight="67.0" fitWidth="471.0" layoutX="201.0" layoutY="260.0" opacity="0.72">
+            <ImageView fx:id="box3" disable="true" fitHeight="67.0" fitWidth="210.0" layoutX="201.0" layoutY="260.0" opacity="0.72">
                <image>
                   <Image url="@Assests/Bg-.png" />
                </image>
             </ImageView>
-            <MFXTextField fx:id="email" floatMode="BORDER" floatingText="Email" layoutX="206.0" layoutY="267.0" prefHeight="50.0" prefWidth="460.0" style="-fx-text-fill: black;" styleClass="signup-txtfield">
+            <MFXTextField fx:id="email" floatMode="BORDER" floatingText="Email" layoutX="206.0" layoutY="267.0" prefHeight="54.0" prefWidth="200.0" style="-fx-text-fill: black;" styleClass="signup-txtfield">
                <textFill>
                   <Color red="1.0" green="1.0" blue="1.0" opacity="0.8700000047683716" />
                </textFill>
             </MFXTextField>
-            <ImageView disable="true" fitHeight="62.0" fitWidth="210.0" layoutX="202.0" layoutY="344.0" opacity="0.72">
+            <ImageView fx:id="box4" disable="true" fitHeight="62.0" fitWidth="210.0" layoutX="202.0" layoutY="344.0" opacity="0.72">
                <image>
                   <Image url="@Assests/Bg-.png" />
                </image>
             </ImageView>
-            <MFXDatePicker fx:id="BirthDate" floatMode="BORDER" floatingText="Date of Birth" layoutX="207.0" layoutY="350.0" style="-fx-text-fill: black;" styleClass="signup-txtfield" />
-            <ImageView disable="true" fitHeight="65.0" fitWidth="215.0" layoutX="456.0" layoutY="343.0" opacity="0.72">
+            <ImageView fx:id="box5" disable="true" fitHeight="65.0" fitWidth="230.0" layoutX="441.0" layoutY="343.0" opacity="0.72">
                <image>
                   <Image url="@Assests/Bg-.png" />
                </image>
             </ImageView>
-            <MFXTextField fx:id="PassportNo" floatMode="BORDER" floatingText="Passport no." layoutX="460.0" layoutY="348.0" prefHeight="54.0" prefWidth="207.0" style="-fx-text-fill: black;" styleClass="signup-txtfield">
+            <MFXTextField fx:id="PassportNo" floatMode="BORDER" floatingText="Passport no." layoutX="445.0" layoutY="348.0" prefHeight="54.0" prefWidth="222.0" style="-fx-text-fill: black;" styleClass="signup-txtfield">
                <textFill>
                   <Color red="1.0" green="1.0" blue="1.0" opacity="0.8700000047683716" />
                </textFill>
             </MFXTextField>
+            <ImageView fx:id="box6" disable="true" fitHeight="66.0" fitWidth="229.0" layoutX="440.0" layoutY="261.0" opacity="0.72">
+               <image>
+                  <Image url="@Assests/Bg-.png" />
+               </image>
+            </ImageView>
+            <MFXTextField fx:id="Credit_Card" floatMode="BORDER" floatingText="Credit Card" layoutX="444.0" layoutY="267.0" prefHeight="54.0" prefWidth="221.0" style="-fx-text-fill: black;" styleClass="signup-txtfield">
+               <textFill>
+                  <Color red="1.0" green="1.0" blue="1.0" opacity="0.8700000047683716" />
+               </textFill>
+            </MFXTextField>
+            <DatePicker fx:id="BirthDate" layoutX="207.0" layoutY="350.0" prefHeight="49.0" prefWidth="201.0" promptText="Date of Birth" styleClass="signup-txtfield" />
+            <ImageView fx:id="Approved" disable="true" fitHeight="187.0" fitWidth="212.0" layoutX="338.0" layoutY="147.0" opacity="0.0" style="-fx-blend-mode: darken;" visible="false">
+               <image>
+                  <Image url="@Assests/Approve.jpg" />
+               </image>
+            </ImageView>
+            <MFXButton id="back" fx:id="Back1" disable="true" layoutX="310.0" layoutY="360.0" minHeight="20.0" minWidth="40.0" onAction="#backToLogin" onMouseClicked="#backToLogin" opacity="0.0" prefHeight="32.0" prefWidth="40.0" style="-fx-background-color: none;" text=" " visible="false" />
+            <Label fx:id="Back_To_Login" disable="true" layoutX="383.0" layoutY="350.0" onMouseClicked="#backToLogin" opacity="0.0" prefHeight="49.0" prefWidth="256.0" style="-fx-font-size: 32; -fx-text-fill: white;" styleClass="label-main" text="Back To Login" textFill="WHITE" visible="false">
+               <font>
+                  <Font name="Poppins SemiBold" size="35.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </center>
