--- a/src/main/resources/com/project/controller/SignUp.fxml
+++ b/src/main/resources/com/project/controller/SignUp.fxml
@@ -4,6 +4,7 @@
 <?import io.github.palexdev.materialfx.controls.MFXPasswordField?>
 <?import io.github.palexdev.materialfx.controls.MFXTextField?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -97,17 +98,12 @@
                </textFill>
             </MFXTextField>
             <DatePicker fx:id="BirthDate" layoutX="207.0" layoutY="350.0" prefHeight="49.0" prefWidth="201.0" promptText="Date of Birth" styleClass="signup-txtfield" />
-            <ImageView fx:id="Approved" disable="true" fitHeight="187.0" fitWidth="212.0" layoutX="338.0" layoutY="147.0" opacity="0.0" style="-fx-blend-mode: darken;" visible="false">
+            <ImageView fx:id="Approved" disable="true" fitHeight="187.0" fitWidth="212.0" layoutX="340.0" layoutY="147.0" opacity="0.0" style="-fx-blend-mode: darken;" visible="false">
                <image>
                   <Image url="@Assests/Approve.jpg" />
                </image>
             </ImageView>
-            <MFXButton id="back" fx:id="Back1" disable="true" layoutX="310.0" layoutY="360.0" minHeight="20.0" minWidth="40.0" onAction="#backToLogin" onMouseClicked="#backToLogin" opacity="0.0" prefHeight="32.0" prefWidth="40.0" style="-fx-background-color: none;" text=" " visible="false" />
-            <Label fx:id="Back_To_Login" disable="true" layoutX="383.0" layoutY="350.0" onMouseClicked="#backToLogin" opacity="0.0" prefHeight="49.0" prefWidth="256.0" style="-fx-font-size: 32; -fx-text-fill: white;" styleClass="label-main" text="Back To Login" textFill="WHITE" visible="false">
-               <font>
-                  <Font name="Poppins SemiBold" size="35.0" />
-               </font>
-            </Label>
+            <Button fx:id="backL" disable="true" layoutX="340.0" layoutY="352.0" mnemonicParsing="false" onAction="#backToLogin" opacity="0.0" prefHeight="54.0" prefWidth="180.0" styleClass="btn" text="Back To Login" visible="false" />
          </children>
       </AnchorPane>
    </center>
