--- a/src/main/resources/com/project/controller/User_Page_My_Trip.fxml
+++ b/src/main/resources/com/project/controller/User_Page_My_Trip.fxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import io.github.palexdev.materialfx.controls.MFXButton?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -15,7 +14,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.paint.Color?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="605.0" prefWidth="900.0" stylesheets="@Assests/Fx.css" type="BorderPane" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="605.0" prefWidth="900.0" stylesheets="@Assests/Fx.css" type="BorderPane" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UserPageMyFlight_Controller">
    <left>
       <AnchorPane id="main_user" prefHeight="605.0" prefWidth="615.0" style="-fx-background-color: #F2994A;" stylesheets="@Assests/Fx.css" BorderPane.alignment="CENTER">
          <effect>
@@ -31,66 +30,101 @@
                   <Image url="@Assests/Rectangle%2011.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="MyTrips" fitHeight="46.0" fitWidth="88.0" layoutX="258.0" layoutY="36.0">
-               <image>
-                  <Image url="@Assests/Group%205.png" />
-               </image>
-            </ImageView>
             <ImageView fx:id="Checkin" fitHeight="47.0" fitWidth="90.0" layoutX="425.0" layoutY="36.0">
                <image>
                   <Image url="@Assests/Group%204.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="Book" fitHeight="44.0" fitWidth="85.0" layoutX="90.0" layoutY="38.0">
-               <image>
-                  <Image url="@Assests/Group%204%20(1).png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="192.0" layoutY="238.0" pickOnBounds="true" preserveRatio="true" />
             <ImageView fitHeight="403.0" fitWidth="546.0" layoutX="34.0" layoutY="112.0">
                <image>
                   <Image url="@Assests/Rectangle%2018.png" />
                </image>
             </ImageView>
             <ImageView fitHeight="49.0" fitWidth="255.0" layoutX="93.0" layoutY="155.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="90.0" fitWidth="480.0" layoutX="64.0" layoutY="167.0">
+            <ImageView fx:id="MyTrips2" fitHeight="46.0" fitWidth="90.0" layoutX="257.0" layoutY="37.0">
                <image>
-                  <Image url="@Assests/Departure%20Form.png" />
+                  <Image url="@Assests/Myflight_btn.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="52.0" fitWidth="480.0" layoutX="64.0" layoutY="268.0">
+            <TabPane layoutX="51.0" layoutY="121.0" prefHeight="379.0" prefWidth="514.0" style="-fx-background-color: none;" styleClass="radios" tabClosingPolicy="UNAVAILABLE">
+              <tabs>
+                <Tab text="PAST">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <Label layoutX="11.0" layoutY="14.0" prefHeight="38.0" prefWidth="479.0" style="-fx-text-fill: grey;" text="There is no available past trip info" textFill="#545454" />
+                           </children>
+                        </AnchorPane>
+                  </content>
+                </Tab>
+                <Tab text="UPCOMMING">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <TableView layoutX="9.0" layoutY="6.0" prefHeight="330.0" prefWidth="495.0">
+                                <columns>
+                                  <TableColumn prefWidth="75.0" text="C1" />
+                                  <TableColumn prefWidth="75.0" text="C2" />
+                                </columns>
+                              </TableView>
+                           </children>
+                        </AnchorPane>
+                  </content>
+                </Tab>
+                  <Tab text="ADD TRIPS">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <ImageView fitHeight="95.0" fitWidth="480.0" layoutX="12.0" layoutY="50.0">
+                                 <image>
+                                    <Image url="@Assests/Rectangle%2020.png" />
+                                 </image>
+                              </ImageView>
+                              <TextField fx:id="Where_From" layoutX="32.0" layoutY="57.0" prefHeight="35.0" prefWidth="442.0" promptText="Booking Reference" styleClass="text-fields" />
+                              <TextField fx:id="Where_To" layoutX="34.0" layoutY="93.0" prefHeight="35.0" prefWidth="441.0" promptText="Last name" styleClass="text-fields" />
+                              <ImageView fitHeight="2.0" fitWidth="428.0" layoutX="30.0" layoutY="92.0">
+                                 <image>
+                                    <Image url="@Assests/Vector%201.png" />
+                                 </image>
+                              </ImageView>
+                              <MFXButton fx:id="Find_Flight" layoutX="14.0" layoutY="142.0" prefHeight="39.0" prefWidth="472.0" style="-fx-border-color: none;" styleClass="btn" text="Continue" />
+                              <Label layoutX="18.0" layoutY="15.0" prefHeight="24.0" prefWidth="304.0" text="Find a trip by booking reference" />
+                              <ImageView fitHeight="140.0" fitWidth="200.0" layoutX="7.0" layoutY="202.0">
+                                 <image>
+                                    <Image url="@Assests/fare2.png" />
+                                 </image>
+                              </ImageView>
+                              <ImageView fitHeight="1.0" fitWidth="505.0" layoutX="4.0" layoutY="196.0">
+                                 <image>
+                                    <Image url="@Assests/Vector%201.png" />
+                                 </image>
+                              </ImageView>
+                              <ImageView fitHeight="140.0" fitWidth="200.0" layoutX="210.0" layoutY="202.0">
+                                 <image>
+                                    <Image url="@Assests/fare3.png" />
+                                 </image>
+                              </ImageView>
+                              <ImageView fitHeight="41.0" fitWidth="41.0" layoutX="436.0" layoutY="250.0">
+                                 <image>
+                                    <Image url="@Assests/bi_arrow-right-circle.png" />
+                                 </image>
+                              </ImageView>
+                              <ImageView fitHeight="41.0" fitWidth="41.0" layoutX="436.0" layoutY="250.0" visible="false">
+                                 <image>
+                                    <Image url="@Assests/Vector%20(1).png" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </Tab>
+              </tabs>
+            </TabPane>
+            <ImageView fx:id="Book" fitHeight="46.0" fitWidth="85.0" layoutX="90.0" layoutY="37.0">
                <image>
-                  <Image url="@Assests/Select%20Depart.png" />
+                  <Image url="@Assests/Flight.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="53.0" fitWidth="480.0" layoutX="64.0" layoutY="329.0">
-               <image>
-                  <Image url="@Assests/Passengers.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="53.0" fitWidth="480.0" layoutX="63.0" layoutY="389.0">
-               <image>
-                  <Image url="@Assests/Type.png" />
-               </image>
-            </ImageView>
-            <MFXButton fx:id="Find_Flight" layoutX="241.0" layoutY="453.0" prefHeight="39.0" prefWidth="119.0" styleClass="btn" text="Find Flight" />
-            <Label layoutX="68.0" layoutY="126.0" prefHeight="33.0" prefWidth="128.0" text="Search Flights" />
-            <TextField fx:id="Where_From" layoutX="132.0" layoutY="175.0" prefHeight="35.0" prefWidth="375.0" promptText="Where From" styleClass="text-fields" />
-            <TextField fx:id="Where_To" layoutX="132.0" layoutY="214.0" prefHeight="35.0" prefWidth="375.0" promptText="Where To" styleClass="text-fields" />
-            <DatePicker fx:id="Dapart_Date" layoutX="127.0" layoutY="269.0" prefHeight="45.0" prefWidth="390.0" promptText="Select Depart" style="-fx-background-color: rgba(225,225,225,0.25); fx-text-fill: white; -fx-border-width: 0;" styleClass="text-fields" stylesheets="@Assests/Fx.css" />
-            <RadioButton fx:id="Economy" layoutX="142.0" layoutY="335.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="110.0" selected="true" styleClass="radios" text="Economy">
-               <toggleGroup>
-                  <ToggleGroup fx:id="Type" />
-               </toggleGroup>
-            </RadioButton>
-            <RadioButton fx:id="Business" layoutX="274.0" layoutY="336.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="104.0" styleClass="radios" text="Business" toggleGroup="$Type" />
-            <RadioButton fx:id="Both" layoutX="403.0" layoutY="335.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="106.0" styleClass="radios" text="Both" toggleGroup="$Type" />
-            <MenuButton fx:id="No_of_people" layoutX="137.0" layoutY="395.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="369.0" styleClass="radios" text="MenuButton">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Action 1" />
-                <MenuItem mnemonicParsing="false" text="Action 2" />
-              </items>
-            </MenuButton>
          </children></AnchorPane>
    </left>
    <right>
