--- a/src/main/resources/com/project/controller/User_Page_Checki_in.fxml
+++ b/src/main/resources/com/project/controller/User_Page_Checki_in.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="605.0" prefWidth="900.0" stylesheets="@Assests/Fx.css" type="BorderPane" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UserPageCheckInController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="605.0" prefWidth="900.0" stylesheets="@Assests/Fx.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.controller.UserPageCheckInController">
    <left>
       <AnchorPane id="main_user" prefHeight="605.0" prefWidth="615.0" style="-fx-background-color: #F2994A;" stylesheets="@Assests/Fx.css" BorderPane.alignment="CENTER">
          <effect>
@@ -27,7 +27,7 @@
                   <Image url="@Assests/Rectangle%2011.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="MyTrips" fitHeight="46.0" fitWidth="88.0" layoutX="258.0" layoutY="36.0">
+            <ImageView fx:id="MyTrips" fitHeight="46.0" fitWidth="88.0" layoutX="258.0" layoutY="36.0" onMouseClicked="#MyTrip">
                <image>
                   <Image url="@Assests/Group%205.png" />
                </image>
@@ -72,7 +72,7 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <ImageView fx:id="Book" fitHeight="44.0" fitWidth="91.0" layoutX="91.0" layoutY="38.0">
+            <ImageView fx:id="Book" fitHeight="44.0" fitWidth="91.0" layoutX="91.0" layoutY="38.0" onMouseClicked="#Book">
                <image>
                   <Image url="@Assests/Flight.png" />
                </image>
@@ -114,8 +114,8 @@
                   <Image url="@Assests/clarity_plane-line.png" />
                </image>
             </ImageView>
-            <MFXButton id="logout" fx:id="Logout" layoutX="166.0" layoutY="335.0" onAction="#Logout" prefHeight="40.0" prefWidth="80.0" style="-fx-font-size: 17;" styleClass="btn" text="Logout" />
+            <MFXButton id="logout" fx:id="Logout" layoutX="166.0" layoutY="335.0" onMouseClicked="#Logout" prefHeight="40.0" prefWidth="80.0" style="-fx-font-size: 17;" styleClass="btn" text="Logout" />
          </children>
       </AnchorPane>
    </right>
-</fx:root>
+</BorderPane>
